alignment bugfix on input page

--- a/src/app/input/input.component.css
+++ b/src/app/input/input.component.css
@@ -20,11 +20,6 @@
     width: 16em;
   }
   
-  /* .item {
-    width: 10.5em;
-    margin-right: 0.5em;
-  } */
-  
   .price {
     width: 4em;
     margin-left: 0.5em;
